<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">KiloLiters</string>

    <string name="action_about">Info su KiloLiters</string>
    <string name="action_drop_db">Elimina dati</string>
    <string name="actual_km">CHILOMETRI ATTUALI</string>
    <string name="city">CITTÀ</string>
    <string name="description">DESCRIZIONE</string>
    <string name="fav_station">DISTRIBUTORE PREFERITO</string>
    <string name="fav_station_description">INFO</string>
    <string name="insert_description">es. Indirizzo</string>
    <string name="kiloliters">CHILOMETRI/LITRO</string>
    <string name="last_refuel">DATA ULTIMO RIFORNIMENTO</string>
    <string name="liters">LITRI EROGATI</string>
    <string name="medium_price">PREZZO MEDIO</string>
    <string name="number_of_refuels">NUMERO DI RIFORNIMENTI INSERITI</string>
    <string name="oil_price">PREZZO CARBURANTE</string>
    <string name="price">IMPORTO PAGATO</string>
    <string name="save_data_button">SALVA RIFORNIMENTO</string>
    <string name="station">MARCA DISTRIBUTORE</string>
    <string name="title_section0">Statistiche</string>
    <string name="title_section1">Statistiche Totali</string>
    <string name="title_section2">Inserimento Dati</string>
    <string name="title_section3">Distributori</string>
    <string name="title_section4">Calcola Bollo</string>
    <string name="total_km">CHILOMETRI PERCORSI</string>
    <string name="total_liters">LITRI CONSUMATI</string>
    <string name="total_paid">SPESE TOTALI</string>

</resources>
