<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content" >

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/total_km"
        android:layout_alignParentTop="true"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="6dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:text="@string/total_km"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/statistic_total_km"
        android:layout_alignParentTop="true"
        android:layout_marginTop="40dp"
        android:layout_marginRight="20dp"
        android:layout_alignParentRight="true"
        android:layout_alignBottom="@id/total_km"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/total_liters"
        android:layout_below="@id/total_km"
        android:text="@string/total_liters"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="6dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/statistic_total_liters"
        android:layout_alignParentRight="true"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:layout_below="@id/total_km"
        android:layout_alignBottom="@id/total_liters"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/total_paid"
        android:layout_below="@id/total_liters"
        android:text="@string/total_paid"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="6dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/statistic_total_paid"
        android:layout_alignParentRight="true"
        android:layout_marginTop="20dp"
        android:layout_below="@id/total_liters"
        android:layout_alignBottom="@id/total_paid"
        android:layout_marginRight="20dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/medium_price"
        android:layout_below="@id/total_paid"
        android:text="@string/medium_price"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="6dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/statistic_medium_price"
        android:layout_alignParentRight="true"
        android:layout_marginTop="20dp"
        android:layout_below="@id/total_paid"
        android:layout_alignBottom="@id/medium_price"
        android:layout_marginRight="20dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/fav_station"
        android:layout_below="@id/medium_price"
        android:text="@string/fav_station"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="6dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/statistic_fav_station"
        android:layout_alignParentRight="true"
        android:layout_marginTop="20dp"
        android:layout_below="@id/medium_price"
        android:layout_alignBottom="@id/fav_station"
        android:layout_marginRight="20dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/kiloliters"
        android:layout_below="@id/fav_station"
        android:text="@string/kiloliters"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="6dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/statistic_kiloliters"
        android:layout_alignParentRight="true"
        android:layout_marginTop="20dp"
        android:layout_below="@id/fav_station"
        android:layout_alignBottom="@id/kiloliters"
        android:layout_marginRight="20dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/last_refuel"
        android:layout_below="@id/kiloliters"
        android:text="@string/last_refuel"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="6dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/statistic_last_refuel"
        android:layout_alignParentRight="true"
        android:layout_marginTop="20dp"
        android:layout_below="@id/kiloliters"
        android:layout_alignBottom="@id/last_refuel"
        android:layout_marginRight="20dp"/>

</RelativeLayout>
</ScrollView>